refactor(fuel-prices): extract FuelPriceOpenDataDao and externalize API URL in application.yaml